# demo_pm25_pred

./: .gitignore  README.md  demo.ipynb  main.py  model_architecture_MERRA2_36_test22norm500.json  pyproject.toml  requirements.txt
lib/: DataGenerator.py  Losses.py  STpconvLayer.py  STpconvUnet.py
out_MERRA2_36_test22norm500/: epoch_01.h5  epoch_02.h5  epoch_03.h5  epoch_04.h5  epoch_05.h5
