[project]
name = "demo-pm25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "rioxarray>=0.22.0",
    "scikit-image>=0.26.0",
    "tensorflow>=2.21.0",
    "xarray>=2026.2.0",
]
